fix(portfolio) : rename

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <header>
-        <h1>Portfolio of Mr. Kasinapot Poonsinsiri</h1>
+        <h1>Portfolio of Mr. Gasinpoj Poonsinsiri</h1>
         <nav>
             <!-- Navigation links if needed -->
         </nav>
